2.may (ws)
      - fix backward compatibility for voltas
      - allow diagonal hairpins (enable in hairpin property menu)
28.apr (ws)
      - style additions for volta
      - fix #8996: crash when extending note length across bar line
27.apr (ws)
      - fix #9920: make beams not movable
      - fix #10416: Page settings crash for empty tab
      - closed #10165: measure nu,. every n shows number (every n)+1
        (patch from Miwarre)
      - fix #10440: Another crash on time signature change (patch from Miwarre)
      - fix #10432: "Parts is broken"
26.apr (ws)
      - implement #10228: Move "Save as..." formats such as .pdf to dedicated
        "Export" menu item
25.apr (ws)
      - implement Album manager
23.apr (ws)
      - move pageOffset from PageSettings() to Score
      - move PageSettings() to Style()
      - fix #10370: Shortcuts cannot be cleared
      - implement "reset to defaults" in preferences-shortcuts dialog
      - fix #3459: Beaming of sixteenth and eight note sequences in 4/4
      - fix #10365: Whole rests corrupt measure on re-loading scores with time
        longer than 4/4 (patch from Miwarre)
      - fix #10366: Oddity and possible crash with score excerpts
22.apr (ws)
      - multi measure rest layout fixes
      - note hooks are not draggable anymore
21.apr (ws)
      - fix #9877: Corruption with tied note in multi-voice
20.apr (ws)
      - added new style parameter: lyrics line height
      - fix placement of rests on one line staff
      - add keyboard shortcut to drum palette entries
      - fix #7883: Double click on drum palette causes crash
      - fix: Some issues with time sigs (patch from Miwarre)
19.apr (ws)
      - delay update of bsp tree
      - fix #10310: Dot of dotted note cannot be made invisible
      - fixes for pre 2.0 score compatibility
18.apr (ws)
      - enable 128th note entry
      - fix #10261: playback cursor does not follow repeat
      - fix #10282: Undo Beam Properties change causes crash
16.apr (ws)